added about page

--- a/about.html
+++ b/about.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-
+    <link rel = "stylesheet" href="css/about.css">
+    <link rel = "stylesheet" href="css/navbar.css">
 </head>
 <body>
+<section class="navbar">
+    <ul>
+        <div class="logo">
+            <p>JACK WONG</p>
+        </div>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="experience.html">EXPERIENCE</a></li>
+        <li><a href="project.html">PROJECTS</a></li>
+    </ul>
+</section>
+    <center>
+        <div class="container">
+            <p>Hi</p>
+        </div>
+    </center>
 
 </body>
 </html>
