updated experience page

--- a/experience.html
+++ b/experience.html
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Experience</title>
-
+    <link rel = "stylesheet" href="css/experience.css">
+    <link rel = "stylesheet" href="css/navbar.css">
 </head>
+
 <body>
+    <section class="navbar">
+        <ul>
+            <div class="logo">
+                <p>JACK WONG</p>
+            </div>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="experience.html">EXPERIENCE</a></li>
+            <li><a href="project.html">PROJECTS</a></li>
+        </ul>
+    </section>
+
+    <div class="row">
+        <div class="column">
+            <div class="container">
+                <img class="center image" src="img/photo_2019-07-14_12-15-49.jpg" style="width: 50%" >
+                <div class="middle">
+                    <div class="text">
+                        I went to Tainan and served a group of local junior secondary students last summer.<br>
+                        <br>
+                        We organized various interactive activities which helped students to understand more about themselves and explore possibilities in their future career. <br>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="container">
+                <img class="center image" src="img/103424372_1210270492637985_6047899912882988009_n.png" style="width: 70%" >
+                <div class="middle">
+                    <div class="text">
+                        I developed automated work-flows using Power Automate to facilitate different processes for this contest.<br>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="container">
+                <img class="center image" src="img/hkoiog_1200x630b.jpg" style="width: 50%" >
+                <div class="middle">
+                    <div class="text">
+                        I trained 20 F.4 students for Hong Kong Olympiad in Informatics (Junior) last summer.<br>
+                        <br>
+                        I guided the students to solve complex past paper questions and gave feedback to their solutions. <br>
+                    </div>
+                </div>
+            </div>
+    </div>
+
+
 
 </body>
 </html>
