--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 </section>
     <center>
         <div class="container">
-            <p>Hi</p>
+            <p>Hi, I am Jack. I am currently in the penultimate year of my bachelor’s degree in Computer Science at The Chinese University of Hong Kong.</p>
         </div>
     </center>
 
