updated the about page and navbar

--- a/about.html
+++ b/about.html
@@ -7,21 +7,59 @@
     <link rel = "stylesheet" href="css/navbar.css">
 </head>
 <body>
-<section class="navbar">
-    <ul>
+    <div class="navbar">
         <div class="logo">
-            <p>JACK WONG</p>
+            <p>Jack Wong </p>
         </div>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="experience.html">EXPERIENCE</a></li>
-        <li><a href="project.html">PROJECTS</a></li>
-    </ul>
-</section>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="experience.html">EXPERIENCE</a></li>
+        </ul>
+    </div>
+    <hr />
+    <br>
     <center>
         <div class="container">
             <p>Hi, I am Jack. I am currently in the penultimate year of my bachelor’s degree in Computer Science at The Chinese University of Hong Kong.</p>
+
+            <p>I am currently working as a part-time tutor for Cornerstone Education Centre.
+                This experience has enabled me to gain a broad understanding of educating juveniles.</p>
+
+            <p>I know Python, Java and C++. I mainly use Python and C++ to solve some coding challenges online.
+            I am currently learning web dev. <br>It is hard yet fun. I will keep working on it.</p>
         </div>
+
     </center>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <center>
+                    <img src="img/1.jpg">
+                </center>
+
+                <p> I love watching cartoons.</p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="card">
+                <center>
+                    <img src="img/IMG_1196.jpg" width="100%">
+                </center>
+
+                <p> I also love hiking.</p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="card">
+                <center>
+                    <img src="img/324-3242007_hacker-mid-pacific-ict-center-cyberfed-magnificent-hacker.png" width="100%" height="100%">
+                </center>
+                <p> I am not a hacker.</p>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
