--- a/experience.html
+++ b/experience.html
@@ -8,16 +8,17 @@
 </head>
 
 <body>
-    <section class="navbar">
+    <div class="navbar">
+        <div class="logo">
+            <p>Jack Wong </p>
+        </div>
         <ul>
-            <div class="logo">
-                <p>JACK WONG</p>
-            </div>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
         </ul>
-    </section>
+    </div>
+    <hr />
 
     <div class="row">
         <div class="column">
